crates/flir-cli/tests/integration/snapshots/integration__flir__fix_options-2.snap
---
source: crates/flir-cli/tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--fix\").arg(\"--unsafe-fixes\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [3:1] duplicated_arguments Avoid duplicate arguments in function calls. Duplicated argument(s): "x".

Found 1 error.

----- stderr -----

----- args -----
check . --fix --unsafe-fixes
