crates/flir-cli/tests/integration/snapshots/integration__flir__fix_options-5.snap
---
source: crates/flir-cli/tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--unsafe-fixes\").arg(\"--fix-only\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --unsafe-fixes --fix-only
