crates/flir-cli/tests/integration/snapshots/integration__flir__must_pass_path.snap
---
source: crates/flir-cli/tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Check a set of files or directories

Usage: flir check [OPTIONS] <FILES>...

Arguments:
  <FILES>...  List of files or directories to check or fix lints, for example `flir check .`.

Options:
  -f, --fix                            Automatically fix issues detected by the linter.
  -u, --unsafe-fixes                   Include fixes that may not retain the original intent of the  code.
      --fix-only                       Apply fixes to resolve lint violations, but don't report on leftover violations. Implies `--fix`.
  -s, --select-rules <SELECT_RULES>    Names of rules to include, separated by a comma (no spaces). [default: ]
  -i, --ignore-rules <IGNORE_RULES>    Names of rules to exclude, separated by a comma (no spaces). [default: ]
  -w, --with-timing                    Show the time taken by the function.
  -m, --min-r-version <MIN_R_VERSION>  The mimimum R version to be used by the linter. Some rules only work starting from a specific version.
      --output-format <OUTPUT_FORMAT>  Output serialization format for violations. [default: concise] [possible values: concise, json]
  -h, --help                           Print help (see more with '--help')

Global options:
      --log-level <LOG_LEVEL>  The log level. One of: `error`, `warn`, `info`, `debug`, or `trace`. Defaults to `warn`
      --no-color               Disable colored output. To turn colored output off, either set this option or set the environment variable `NO_COLOR` to any non-zero value

----- args -----
check
