crates/flir-cli/tests/integration/snapshots/integration__flir__not_all_fixable_lints.snap
---
source: crates/flir-cli/tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [1:0] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test2.R [1:0] duplicated_arguments Avoid duplicate arguments in function calls. Duplicated argument(s): "x".

Found 2 errors.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
