crates/flir-cli/tests/integration/snapshots/integration__flir__parsing_error.snap
---
source: crates/flir-cli/tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Failed to parse test.R due to syntax errors.

----- args -----
.
